Resolving latest version of installer channel from maven